--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongodb": "^3.0.10",
-    "mongoose": "^5.1.7"
+    "mongoose": "^5.1.7",
+    "validator": "^10.4.0"
   },
   "devDependencies": {
     "expect": "^23.3.0",
